--- a/17. historias ig/index.html
+++ b/17. historias ig/index.html
@@ -13,56 +13,57 @@
         <div class="outer-border">
           <div class="border">
             <a href="#">
-              <img src="profile1.jpeg" alt="" />
+              <img src="https://cdn.forbes.com.mx/2020/03/Batman--640x360.jpg" alt="" />
             </a>
           </div>
         </div>
-        <div class="name">Marcos Rivas</div>
+        <div class="name">OSCAR AGUILERA</div>
       </div>
 
       <div class="story">
         <div class="outer-border">
           <div class="border">
             <a href="#">
-              <img src="profile1.jpeg" alt="" />
+              <img src="https://cdn.forbes.com.mx/2020/03/Batman--640x360.jpg" alt="" />
             </a>
           </div>
         </div>
-        <div class="name">Marcos Rivas</div>
+        <div class="name">OSCAR AGUILERA</div>
       </div>
 
       <div class="story">
         <div class="outer-border">
           <div class="border">
             <a href="#">
-              <img src="profile1.jpeg" alt="" />
+              <img src="https://cdn.forbes.com.mx/2020/03/Batman--640x360.jpg" alt="" />
             </a>
           </div>
         </div>
-        <div class="name">Marcos Rivas</div>
+        <div class="name">OSCAR AGUILERA</div>
       </div>
 
       <div class="story">
         <div class="outer-border">
           <div class="border">
             <a href="#">
-              <img src="profile1.jpeg" alt="" />
+              <img src="https://cdn.forbes.com.mx/2020/03/Batman--640x360.jpg" alt="" />
             </a>
           </div>
         </div>
-        <div class="name">Marcos Rivas</div>
+        <div class="name">OSCAR AGUILERA</div>
       </div>
 
       <div class="story">
         <div class="outer-border">
           <div class="border">
             <a href="#">
-              <img src="profile1.jpeg" alt="" />
+              <img src="https://cdn.forbes.com.mx/2020/03/Batman--640x360.jpg" alt="" />
             </a>
           </div>
         </div>
-        <div class="name">Marcos Rivas</div>
+        <div class="name">OSCAR AGUILERA</div>
       </div>
     </div>
   </body>
 </html>
+
