--- a/02. tarjeta/index.html
+++ b/02. tarjeta/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="app">
       <div class="card">
-        <div class="holder">Marcos Rivas Rojas</div>
+        <div class="holder">OSCAR OMAR AGUILERA</div>
         <input type="text" id="inputCard" />
         <input type="text" id="inputDate" />
         <input type="text" id="inputCVV" />
