--- a/02. tarjetas/index.html
+++ b/02. tarjetas/index.html
@@ -18,7 +18,7 @@
           <div class="author">
             <a href="#">
               <img src="" alt="" />
-              <span>Marcos Rivas</span>
+              <span>OSCAR OMAR AGUILERA</span>
             </a>
           </div>
         </div>
@@ -33,7 +33,7 @@
           <div class="author">
             <a href="#">
               <img src="" alt="" />
-              <span>Marcos Rivas</span>
+              <span>OSCAR OMAR AGUILERA</span>
             </a>
           </div>
         </div>
@@ -48,7 +48,7 @@
           <div class="author">
             <a href="#">
               <img src="" alt="" />
-              <span>Marcos Rivas</span>
+              <span>OSCAR OMAR AGUILERA</span>
             </a>
           </div>
         </div>
@@ -65,7 +65,7 @@
           <div class="author">
             <a href="#">
               <img src="" alt="" />
-              <span>Marcos Rivas</span>
+              <span>OSCAR OMAR AGUILERA</span>
             </a>
           </div>
         </div>
