--- a/03.  tabla/index.html
+++ b/03.  tabla/index.html
@@ -25,7 +25,7 @@
 
       <tbody>
         <tr>
-          <td>Marcos Rivas</td>
+          <td>OSCAR OMAR AGUILERA</td>
           <td>México</td>
           <td>$3,500</td>
           <td>$6,500</td>
@@ -33,7 +33,7 @@
           <td>16</td>
         </tr>
         <tr>
-          <td>Marcos Rivas</td>
+          <td>OSCAR OMAR AGUILERA</td>
           <td>México</td>
           <td>$3,500</td>
           <td>$6,500</td>
@@ -41,7 +41,7 @@
           <td>16</td>
         </tr>
         <tr>
-          <td>Marcos Rivas</td>
+          <td>OSCAR OMAR AGUILERA</td>
           <td>México</td>
           <td>$3,500</td>
           <td>$6,500</td>
@@ -49,7 +49,7 @@
           <td>16</td>
         </tr>
         <tr>
-          <td>Marcos Rivas</td>
+          <td>OSCAR OMAR AGUILERA</td>
           <td>México</td>
           <td>$3,500</td>
           <td>$6,500</td>
@@ -57,7 +57,7 @@
           <td>16</td>
         </tr>
         <tr>
-          <td>Marcos Rivas</td>
+          <td>OSCAR OMAR AGUILERA</td>
           <td>México</td>
           <td>$3,500</td>
           <td>$6,500</td>
